--- a/static/style.css
+++ b/static/style.css
@@ -54,6 +54,7 @@
     border-radius: 15px;
     border: 2px solid rgb(247, 62, 170);
     display: flex;
+    
   }
   
   .card .card-body {
@@ -192,11 +193,12 @@
   .alert-message{
     height: 130px;
     width: 130px;
-    background-color: transparent;
     backdrop-filter: blur(20px);
+    display:list-item;
+    justify-content: center;
+    border-radius: 5px;
   }
   .alert-content{
-    justify-content: center;
     align-items: center;
    
   }
