--- a/static/style.css
+++ b/static/style.css
@@ -7,8 +7,11 @@
   body {
     background-color: rgb(248, 219, 237);
     font-family: Arial, sans-serif;
+    position: relative;
+    
   }
   
+
   .header h2 {
     color: #333;
     font-weight: bold;
@@ -40,7 +43,7 @@
   .card {
     position: relative;
     width: 100%;
-    height: 150px; /* adjust to your card image height */
+    height: 250px; /* adjust to your card image height */
     background-color: transparent;
     border: none;
     border-radius: 15px;
@@ -62,7 +65,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%; /* change to 100% to make overlay responsive */
+    height: 200%; /* change to 100% to make overlay responsive */
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -78,15 +81,15 @@
   .card .card-title {
     font-size: 18px;
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     background-color: transparent;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(20px);
     color: white;
   }
   
   .card-text {
     font-size: 14px;
-    margin-top: 10px;
+    margin-bottom: 110px;
   }
   
   
@@ -104,19 +107,12 @@
     margin-bottom: 0.5rem;
     color: #333;
   }
-  
-  /* .fixed-bottom {
-    background-color: #ffffff;
-    border-top: 1px solid #dddddd;
-    width: 80%;
-    justify-content: center;
+  .row{
+    height: max-content;
+    width: 100%;
   }
   
-  .fixed-bottom a {
-    color: #6c757d;
-    font-size: 24px;
-  } */
-  
+
   .btn-group {
     border-radius: 20px;
   }
@@ -124,7 +120,6 @@
   .icon1 {
     background-color: #fff; /* or any other color you prefer */
     border-radius: 50%;
-    /* padding: 10px; adjust the padding to fit your icon size */
     width: 50px; /* adjust the width to fit your icon size */
     height: 50px; /* adjust the height to fit your icon size */
     display: inline-block;
@@ -159,7 +154,7 @@
   
   @media (max-width: 768px) {
     .card {
-      height: 100px; /* adjust card height for smaller screens */
+      height: 120px; /* adjust card height for smaller screens */
     }
     .card img {
       height: 100%; /* make image responsive */
@@ -181,26 +176,33 @@
     }
   }
   
-  /* .up1{
-    background-color: transparent;
-    filter: blur(20px);
-  } */
+  
   .alert-btn{
     color: white;
     background-color: purple;
     border-radius: 5px;
   }
   .alert-message{
-    height: 130px;
-    width: 130px;
+    height: 220px;
+    width: 230px;
+    padding: 10px;
     backdrop-filter: blur(20px);
-    display:list-item;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    display:flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     border-radius: 5px;
   }
   .alert-content{
     align-items: center;
    
+  }
+  .center-alert {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   .b1{
     justify-content: center;
@@ -236,4 +238,11 @@
 .icon1{
   height: 40px;
   width: 40px;
+}
+
+
+/* blur bottom */
+.blur-half{
+  background-color: transparent;
+  backdrop-filter: blur(20px);
 }
